--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --mode dev",
+    "dev:localhost": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
