--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
     "dev": "vue-cli-service serve --mode dev",
-    "dev:localhost": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev:localhost": "vue-cli-service serve"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.5.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
