--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.7",
     "vuex": "^3.6.2",
