--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "formtyper-front-vue-2",
-  "version": "0.1.0",
+  "version": "1.3.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "dev": "vue-cli-service serve --mode dev",
-    "dev:localhost": "vue-cli-service serve"
+    "dev:local": "vue-cli-service serve"
   },
   "dependencies": {
     "axios": "^0.27.2",
