--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formtyper-front-vue-2",
-  "version": "1.3.2",
+  "version": "1.4.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,18 +9,21 @@
     "dev:local": "vue-cli-service serve"
   },
   "dependencies": {
+    "apexcharts": "^3.41.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-axios": "^3.4.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.7",
     "vuex": "^3.6.2",
-    "vuex-persist": "^3.1.3"
+    "vuex-persist": "^3.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
